Resolves gh-242 by adding spacing between title and count

--- a/app/pb_kits/playbook/pb_title_count/_title_count.scss
+++ b/app/pb_kits/playbook/pb_title_count/_title_count.scss
@@ -6,8 +6,8 @@
   justify-content: flex-start;
   align-items: baseline;
 
-  & > [class^=pb_title_kit] {
-    margin-right: $space-xs;
+  & > .pb_title_count_text {
+    padding-right: $space-xs;
   }
 
   &[class*=_center] {
